@@ -2,6 +2,7 @@
 
 	* add bookmark menu now allows you to chose where to
 	  add bookmark
+	* added save verse list to bookmarks
 
 
 2001-08-03 Terry Biggs <tbiggs@users.sourceforge.net>
